fix z-index

--- a/src/component/Dialog/style.scss
+++ b/src/component/Dialog/style.scss
@@ -13,7 +13,13 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 1;
+}
+
+@media screen and (max-width: "900px") {
+  .dialog-on {
+    z-index: 2;
+  }
 }
 
 .dialog-background {
@@ -23,7 +29,7 @@
 }
 
 @media screen and (max-width: 900px) {
-  .dialog-background{
+  .dialog-background {
     left: -12vw;
     top: 0;
   }
