--- a/src/component/ProfileAvatarUpload/style.scss
+++ b/src/component/ProfileAvatarUpload/style.scss
@@ -14,7 +14,6 @@
 	animation-name: dialogGroupAppear;
 	animation-duration: 0.2s;
 	animation-timing-function: ease-in-out;
-	z-index: 102;
 }
 
 .btn-container {
