--- a/src/containers/Home/ChatArea/GroupDetail/AddMembersDialog.scss
+++ b/src/containers/Home/ChatArea/GroupDetail/AddMembersDialog.scss
@@ -13,7 +13,6 @@
   animation-name: add-members-dialog-appear;
   animation-duration: 0.2s;
   animation-timing-function: ease-in-out;
-  z-index: 101;
 }
 
 @keyframes add-members-dialog-appear {
