--- a/src/containers/Home/ChatArea/GroupDetail/DeleteMembersDialog.scss
+++ b/src/containers/Home/ChatArea/GroupDetail/DeleteMembersDialog.scss
@@ -13,7 +13,6 @@
   animation-name: delete-members-dialog-appear;
   animation-duration: 0.2s;
   animation-timing-function: ease-in-out;
-  z-index: 101;
 }
 
 @keyframes delete-members-dialog-appear {
