--- a/src/containers/Home/ChatArea/GroupDetail/GroupDetail.scss
+++ b/src/containers/Home/ChatArea/GroupDetail/GroupDetail.scss
@@ -3,7 +3,6 @@
 .group-detail-context {
   transition: all 0.5s ease-in-out;
   height: 100%;
-  z-index: 51;
 }
 
 @media screen and (max-width: 900px) {
@@ -11,6 +10,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
   }
 }
 
