--- a/src/containers/Home/Header/Header.scss
+++ b/src/containers/Home/Header/Header.scss
@@ -130,7 +130,6 @@
 .header-wrapper>i {
   padding-right: 16px;
   font-size: 2rem;
-  z-index: 8;
   opacity: 0.4;
   transition: opacity 0.1s ease-in-out;
   cursor: pointer;
