--- a/src/containers/Home/Menu/GroupDialog.scss
+++ b/src/containers/Home/Menu/GroupDialog.scss
@@ -11,7 +11,7 @@
   animation-name: dialog-add-group-appear;
   animation-duration: 0.2s;
   animation-timing-function: ease-in-out;
-  z-index: 101;
+  z-index: 1;
 }
 
 @keyframes dialog-add-group-appear {
