--- a/src/containers/Home/Menu/ProfileDialog.scss
+++ b/src/containers/Home/Menu/ProfileDialog.scss
@@ -23,7 +23,6 @@
     animation-timing-function: ease-in-out;
     position: relative;
     font-family: $default-font;
-    z-index: 100;
 }
 
 //Profile Avatar
