--- a/src/containers/Home/Menu/UserOption.scss
+++ b/src/containers/Home/Menu/UserOption.scss
@@ -11,7 +11,6 @@
   flex-direction: column;
   justify-content: center;
   cursor: pointer;
-  z-index: 3;
   animation-name: userOptionAppear;
   animation-duration: 0.15s;
   animation-timing-function: ease-in-out;
