--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -36,7 +36,7 @@
     min-width: 0;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    z-index: 51;
+    z-index: 1;
   }
 
   .toggle-target {
@@ -56,7 +56,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 50;
+    z-index: 1;
   }
 }
 
